# marimo-audio-self-tutorial

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
.github/workflows/: pages.yml
chapters/: 01_sine_wave.qmd  02_wave_controls.qmd  03_envelope.qmd  04_note_names.qmd  05_melody_synth.qmd  06_visualize_waveform.qmd  07_spectrum_fft.qmd  08_detect_pitch_fft.qmd  09_upload_audio.qmd  10_onset_energy.qmd  11_note_event_table.qmd  12_simple_transcriber.qmd  13_music21_score.qmd  14_verovio_svg.qmd  15_compare_ground_truth.qmd  16_report_card.qmd  17_overtone_filter.qmd  18_tempo_quantization.qmd  19_basic_pitch_bridge.qmd  20_hf_space_app.qmd
notebooks/01_sine_wave/: notebook.py
notebooks/02_wave_controls/: notebook.py
notebooks/03_envelope/: notebook.py
notebooks/04_note_names/: notebook.py
notebooks/05_melody_synth/: notebook.py
notebooks/06_visualize_waveform/: notebook.py
notebooks/07_spectrum_fft/: notebook.py
notebooks/08_detect_pitch_fft/: notebook.py
notebooks/09_upload_audio/: notebook.py
notebooks/10_onset_energy/: notebook.py
notebooks/11_note_event_table/: notebook.py
notebooks/12_simple_transcriber/: notebook.py
notebooks/13_music21_score/: notebook.py
notebooks/14_verovio_svg/: notebook.py
notebooks/15_compare_ground_truth/: notebook.py
notebooks/16_report_card/: notebook.py
notebooks/17_overtone_filter/: notebook.py
notebooks/18_tempo_quantization/: notebook.py
notebooks/19_basic_pitch_bridge/: notebook.py
notebooks/20_hf_space_app/: notebook.py
scripts/: export_wasm.py  generate_chapters.py
